<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/general_back_icon1"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black_italic"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_details"
            android:textSize="18sp"
            android:fontFamily="@font/muli_light"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mobile_custome_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>


            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_marginTop="35dp"
                android:layout_toRightOf="@id/mobile_icon"/>


            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+923332562233"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:textColor="@color/black"
                android:layout_below="@id/mobile_title"
                android:layout_toRightOf="@id/mobile_icon"/>
            
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="color/transparent"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/field_email_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>


            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_marginTop="35dp"
                android:layout_toRightOf="@id/mail_icon"/>


            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+923332562233"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:textColor="@color/black"
                android:layout_below="@id/mail_title"
                android:layout_toRightOf="@id/mail_icon"/>

            <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="color/transparent"/>

        </RelativeLayout>



    </LinearLayout>

</ScrollView>